--- a/style.css
+++ b/style.css
@@ -1,92 +1,66 @@
-.emoji {
-  text-align: center;
-  font-size: x-large;
-  color: #1a64d6;
-  font-size: 35px;
-}
+      h1,
+      h2,
+      h3 {
+        text-align: center;
+        font-family: Helvetica, Arial, sans-serif;
+      }
 
-h1 {
-  text-align: center;
-  color: #1a64d6;
-  font-weight: bold;
-  font-size: 36px;
-  display: block;
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
+      h1 {
+        color: #1a64d6;
+        font-size: 34px;
+        line-height: 48px;
+        margin: 0;
+      }
 
-h2 {
-  font-family: Arial, Helvetica, sans-serif;
-}
+      h2 {
+        margin: 0;
 
-h3 {
-  font-family: Arial, Helvetica, sans-serif;
-}
+        font-size: 34px;
+        line-height: 48px;
+        font-weight: 400;
+      }
 
-.light {
-  font-weight: 400;
-  text-align: center;
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  display: block;
-  font-size: 35px;
-}
+      ul {
+        padding: 0;
+      }
 
-strong {
-  font-weight: bold;
-}
+      li {
+        list-style: none;
+        text-align: center;
+        padding: 10px 0;
+        border-radius: 10px;
+        transition: all 200ms ease-in-out;
+        max-width: 400px;
+        margin: 0 auto;
+      }
 
-ul {
-  list-style-type: none;
-  text-align: center;
-  font-size: 17px;
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 15px auto;
-  display: inline;
-}
+      li:hover {
+        background: #fffbef;
+      }
 
-button {
-  margin: auto;
-  border-radius: 35px;
-  padding: 17px 24px;
-  border: 1px solid #1a64d6;
-  background: #1a64d6;
-  color: white;
-  font-size: 17px;
-  display: block;
-  cursor: pointer;
-  transition: all 150ms ease-in-out;
-}
+      p {
+        font-size: 18px;
+        opacity: 0.7;
+        text-align: center;
+        font-family: monospace;
+      }
 
-button:hover {
-  color: #1a64d6;
-  background: white;
-}
+      button {
+        display: block;
+        margin: 20px auto;
+        border: 1px solid #1a64d6;
+        background: #1a64d6;
+        color: #fff;
+        font-size: 16px;
+        line-height: 22px;
+        padding: 16px 24px;
+        border-radius: 30px;
+        transition: all 200ms ease;
+        box-shadow: rgba(37, 39, 89, 0.08) 0px 8px 8px 0;
+        cursor: pointer;
+      }
 
-p {
-  font-family: monospace;
-  opacity: 0.6;
-  text-align: center;
-}
-.weather-div {
-  width: 500px;
-  margin: auto;
-}
-
-.hover-1,
-.hover-2,
-.hover-3 {
-  padding: 20px;
-  width: 300px;
-  margin: auto;
-  border-radius: 10px;
-  transition: all 150ms ease-in-out;
-}
-
-.hover-1:hover,
-.hover-2:hover,
-.hover-3:hover {
-  background-color: #fffbef;
-  color: rgb(51, 50, 50);
-  cursor: pointer;
-}
+      button:hover {
+        background: white;
+        color: #1a64d6;
+        border: 1px solid #1a64d6;
